Correction Module Réservation